@@ -35,10 +35,9 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: match.c,v 1.18 2002/02/28 19:36:28 stevesk Exp $");
+RCSID("$OpenBSD: match.c,v 1.19 2002/03/01 13:12:10 markus Exp $");
 
 #include "match.h"
-#include "canohost.h"
 #include "xmalloc.h"
 
 /*
@@ -203,7 +202,7 @@ match_host_and_ip(const char *host, const char *ipaddr,
  * match user, user@host_or_ip, user@host_or_ip_list against pattern
  */
 int
-match_user(const char *user, int verify_reverse_mapping,
+match_user(const char *user, const char *host, const char *ipaddr,
     const char *pattern)
 {
 	char *p, *pat;
@@ -217,9 +216,7 @@ match_user(const char *user, int verify_reverse_mapping,
 	*p++ = '\0';
 
 	if ((ret = match_pattern(user, pat)) == 1)
-		ret = match_host_and_ip(
-		    get_canonical_hostname(verify_reverse_mapping),
-		    get_remote_ipaddr(), p);
+		ret = match_host_and_ip(host, ipaddr, p);
 	xfree(pat);
 
 	return ret;
